{{$NEXT}}

 * Reduced the default value of `maxHeight` for canvas-based feature
   tracks (like Alignments2) from 1000 to 600.

 * Fixed a bug in the `Alignments` track type where BAM features with
   missing mate pairs that are not drawn due to their position above
   the track's `maxHeight` caused the track rendering to crash.
   Thanks to Tristan Lubinski for reporting this.

 * Fixed bug preventing display of quantitative data from files loaded
   with flatfile-to-json.pl.  Thanks to Gwendoline Andres for pointing
   this out.

 * Instead of quantitative (wiggle) tracks throwing an error when they
   cannot choose a min and max for the display scale, they now just
   make a guess.  While probably wrong, this at least has the track
   displaying something, and users can then look up how to fix the
   display scale.

 * Significant speed and memory optimizations in BAM data backend
   (issue #242).

 * Added support for a `chunkSizeLimit` configuration variable for
   BAM-based tracks, which defaults to 5MB.  When fetching BAM data,
   if a given region requires fetching a chunk of a BAM file that is
   larger than this limit, a 'Too much data' message is displayed.
   This helps prevent speed and memory problems when displaying
   deep-coverage BAM tracks (issue #242).  Thanks to Gustavo Cerquiera
   (GitHub user cerca11) for pushing for progress on this.

 * Fixed a regression in which callbacks and interpolations were not
   evaluated in left-click and right-click menu configurations.

 * Fixed incorrect display of negative values in log-scale wiggle
   tracks.  Thanks to GitHub user drusch for pointing this out
   (issue #244).

 * Fixed more more minor errors when running under IE 7.

1.9.0     2013-04-16 18:59:19 EST5EDT

 * Added a direct-access data backend for reading variation data
   directly from VCF files that have been compressed with `bgzip` and
   indexed with `tabix`.  See the JBrowse Configuration Guide on the