@@ -8,6 +8,15 @@
    the track's `maxHeight` caused the track rendering to crash.
    Thanks to Tristan Lubinski for reporting this.
 
+ * If no global `refSeqOrder` is specified in the configuration, the
+   reference sequences are now not sorted.  Currently, this means that
+   they will appear in the same order as loaded by
+   `prepare-refseqs.pl`.  Users with a very large number of (more than
+   10,000) reference sequences may wish to avoid specifying a
+   `refSeqOrder`, since sorting the reference sequences is done at
+   JBrowse startup time.  Thanks to Tristan Lubinski for reporting
+   this.
+
  * Fixed bug preventing display of quantitative data from files loaded
    with flatfile-to-json.pl.  Thanks to Gwendoline Andres for pointing
    this out.
